--- a/Introduction - Project Proposal/Introduction - Project Proposal.tex
+++ b/Introduction - Project Proposal/Introduction - Project Proposal.tex
@@ -11,8 +11,31 @@
 
 \section{Introduction}
 
+Hyperbolic PDEs are useful for various phyical phenomena.
+
+Acoustics, electromagnetic, fluid motion, etc.
+
+Linear vs non linear 
+
+Advection equation
+
+Burgers' equation
+
+Use viscous Burgers' equaiton to remove limiters
+
+Look at 2nd and 4th order using finite difference
+
 \section{Methodology}
 
+Investigate 2D Burgers' in c++ using OpenMP
+
+Look at strong vs weak scaling, cache blocking 
+
+
 \section{Future Work}
+
+Investgate using Kokkos 
+
+Stepping stone to k-athena
 
 \end{document}
