--- a/Introduction - Project Proposal/Introduction - Project Proposal.tex
+++ b/Introduction - Project Proposal/Introduction - Project Proposal.tex
@@ -21,7 +21,7 @@ Advection equation
 
 Burgers' equation
 
-Use viscous Burgers' equaiton to remove limiters
+Use viscous Burgers' equaiton to not worrt about limiters
 
 Look at 2nd and 4th order using finite difference
 
@@ -29,8 +29,13 @@ Look at 2nd and 4th order using finite difference
 
 Investigate 2D Burgers' in c++ using OpenMP
 
-Look at strong vs weak scaling, cache blocking 
+Look at strong and weak scaling, cache blocking 
 
+strong and weak on CPU and GPU
+
+look at how to configure/optimize omp for GPU
+
+omp 4.5 and 5.0 have support for optimizing GPUs
 
 \section{Future Work}
 
