--- a/Introduction - Project Proposal/Introduction - Project Proposal.tex
+++ b/Introduction - Project Proposal/Introduction - Project Proposal.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{CMSE 822 Final Project - 2D Burgers}
+\title{CMSE 822 Final Project }
 \author{Carolyn Wendeln}
 \date{\today}
 
@@ -9,38 +9,37 @@
 
 \maketitle
 
-\section{Introduction}
 
-Hyperbolic PDEs are useful for various phyical phenomena.
+Modern astrophysical research has become increasingly dominated by large scale, multi-dimensional simulations.
+Phenomena such as supernovae core collapse, coronal mass ejections, or neutron star mergers all rely on multi-scale simulations.
+These simulations can span orders of magnitude in scale separation, yet these vast scales are required to resolve the key underlying physics involved.
+Although these large scale simulations have become a necessity, they often require an ever-increasing amount of computational resources.
 
-Acoustics, electromagnetic, fluid motion, etc.
+One key feature that most of these astrophysical phenomena have in common is that they are often coupled to hyperbolic partial differential equations (PDEs).
+Equations such as Euler, Cauchy, or Navier–Stokes are often used for simulating astrophysical plasmas.
+These simulations often call for techniques such as adaptive mesh refinement (AMR) and high order finite difference or finite volume methods.
 
-Linear vs non linear 
+For this research project, I will be investigating second and fourth order discretization of hyperbolic PDEs.
+In particular, I will look at the two dimensional form of the advection equation, viscous Burgers' equation, and inviscid Burgers' equation.
+This work will focus on these equations over a periodic domain on a uniform mesh grid using finite difference methods.
 
-Advection equation
+The goal of this research project is to understand the underlying issues surrounding hyperbolic solvers for fluid equations.
+I will investigate various optimization techniques for a single node.
+My work will begin with parallelization using OpenMP 4.5 or 5.0. to target both CPUs and GPUs.
+After parallelisation, I will employ other techniques such as cache blocking to see the effects of strong and weak scaling.
+Once I believe I have achieved optimal performance using OpenMP, I will try to implement similar techniques using Kokkos.
 
-Burgers' equation
+Kokkos is an open source c++ performance portability programming model that has recently been coupled with Athena++ to create K-Athena \footnote[1]{https://ieeexplore.ieee.org/document/9143480}.
+Athena++ is a magnetohydrodynamics CUP code that is based on MPI+OpenMP.
+K-Athena utilizes MPI for inter-node parallelism, hence my project here will focus solely on optimization for a single node.
+Likewise Kokkos is compatible with optimization techniques which target both CPUs and GPUs.
+K-Athena will become a key component to my own thesis, so this research project serves as a fantastic stepping stone to my future research studying astrophysical phenomena using AMR and finite volume methods.
 
-Use viscous Burgers' equaiton to not worrt about limiters
 
-Look at 2nd and 4th order using finite difference
 
-\section{Methodology}
 
-Investigate 2D Burgers' in c++ using OpenMP
 
-Look at strong and weak scaling, cache blocking 
 
-strong and weak on CPU and GPU
-
-look at how to configure/optimize omp for GPU
-
-omp 4.5 and 5.0 have support for optimizing GPUs
-
-\section{Future Work}
-
-Investgate using Kokkos 
-
-Stepping stone to k-athena
+ 
 
 \end{document}
