--- a/Final Report/Final_Report_Bibliography.bib
+++ b/Final Report/Final_Report_Bibliography.bib
@@ -1,6 +1,12 @@
 @book{zingale_2020, 
-series={The Open Astrophysics Bookshelf}, title={ Introduction to Computational Astrophysical Hydrodynamics}, 
+series={The Open Astrophysics Bookshelf}, 
+title={Introduction to Computational Astrophysical Hydrodynamics}, 
 author={Zingale, Michael}, 
 year={2020}, 
-collection={The Open Astrophysics Bookshelf}
+}
+
+@book{eijkhout_2021, 
+title={Parallel Programming for Science and Engineering}, 
+author={Eijkhout, Victor}, 
+year={2021}, 
 }
